Øk maks-minne i test